--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Industries.html">Industries</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
@@ -1778,4 +1778,5 @@
         });
     </script>
 </body>
+
 </html>
