--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
 
 <div class="services-grid">
 
-    <a href="services/software-development.html" class="service-tile">
+    <a href="software-development.html" class="service-tile">
         <div class="tile-icon">
         <svg viewBox="0 0 24 24" fill="none">
         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke-width="1.5"/>
@@ -1780,4 +1780,5 @@
 </body>
 
 </html>
+
 
