--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
         <span class="tile-arrow">→</span>
     </a>
 
-<a href="services/cloud-infrastructure.html" class="service-tile">
+<a href="cloud-infrastructure.html" class="service-tile">
         <div class="tile-icon"></div>
         <div class="tile-content">
             <h3>Cloud Infrastructure</h3>
@@ -1249,7 +1249,7 @@
         <span class="tile-arrow">→</span>
     </a>
 
-    <a href="services/cybersecurity.html" class="service-tile">
+    <a href="cybersecurity.html" class="service-tile">
         <div class="tile-icon"></div>
         <div class="tile-content">
             <h3>Cybersecurity</h3>
@@ -1258,7 +1258,7 @@
         <span class="tile-arrow">→</span>
     </a>
 
-  <a href="services/data-analytics.html" class="service-tile">
+  <a href="data-analytics.html" class="service-tile">
         <div class="tile-icon"></div>
         <div class="tile-content">
             <h3>Data Analytics</h3>
@@ -1266,7 +1266,7 @@
         </div>
         <span class="tile-arrow">→</span>
     </a>
-<a href="services/ai-ml.html" class="service-tile">
+<a href="ai-ml.html" class="service-tile">
         <div class="tile-icon"></div>
         <div class="tile-content">
             <h3>AI & Machine Learning</h3>
@@ -1275,7 +1275,7 @@
         <span class="tile-arrow">→</span>
     </a>
 
-    <a href="services/mobile-apps.html" class="service-tile">
+    <a href="mobile-apps.html" class="service-tile">
         <div class="tile-icon"></div>
         <div class="tile-content">
             <h3>Mobile Applications</h3>
@@ -1780,5 +1780,6 @@
 </body>
 
 </html>
+
 
 
