--- a/cloud-infrastructure.html
+++ b/cloud-infrastructure.html
@@ -395,11 +395,11 @@ html
             <button class="mobile-menu-btn">☰</button>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html#About">About</a></li>
-                    <li><a href="../index.html#services">Services</a></li>
-                    <li><a href="../index.html#clients">Clients</a></li>
-                    <li><a href="../index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#About">About</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#clients">Clients</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -497,4 +497,5 @@ html
         });
     </script>
 </body>
+
 </html>
