--- a/cloud-infrastructure.html
+++ b/cloud-infrastructure.html
@@ -396,10 +396,11 @@ html
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#About">About</a></li>
-                    <li><a href="index.html#services">Services</a></li>
-                    <li><a href="index.html#clients">Clients</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                    <li><a href="industries.html">Industries</a></li>
+                    <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -499,3 +500,4 @@ html
 </body>
 
 </html>
+
