--- a/services.html
+++ b/services.html
@@ -971,7 +971,7 @@ footer {
                     <li><a href="about.html">About</a></li>
                     <li><a>Services</a></li>
                     <li><a href="Industries.html">Industries</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -1667,4 +1667,5 @@ footer {
         });
     </script>
 </body>
+
 </html>
