--- a/software-development.html
+++ b/software-development.html
@@ -424,11 +424,11 @@ html
             <button class="mobile-menu-btn">☰</button>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html#about">About</a></li>
-                    <li><a href="../index.html#services">Services</a></li>
-                    <li><a href="../index.html#clients">Clients</a></li>
-                    <li><a href="../index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="industries.html#clients">Industries</a></li>
+                    <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -526,3 +526,4 @@ html
     </script>
 </body>
 </html>
+
