--- a/software-development.html
+++ b/software-development.html
@@ -427,7 +427,7 @@ html
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="industries.html#clients">Industries</a></li>
+                    <li><a href="industries.html">Industries</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
@@ -526,4 +526,5 @@ html
     </script>
 </body>
 </html>
+
 
